# congenial-couscous

./: .env.sample  Dockerfile  README.md  docker-compose.yml  pyproject.toml  users.json
.github/workflows/: test.yml
api/: reqres_api.py
app/: data.py  main.py  models.py
app/database/: engine.py  users.py
app/models/: user.py
app/routers/: login.py  root.py  status.py  users.py
models/: user.py
tests/: conftest.py  test_auth.py  test_pagination.py  test_smoke.py  test_user.py
