[project]
name = "congenial-couscous"
version = "0.1.0"
description = ""
authors = [
    {name = "StadnichenkoDaria",email = "brodiagad@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pytest (>=8.4.2,<9.0.0)",
    "fastapi (>=0.118.0,<0.119.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "fastapi-pagination (>=0.14.2,<0.15.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "sqlmodel (>=0.0.25,<0.0.26)",
    "setuptools (>=80.9.0,<81.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
pythonpath = '.'
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore:pkg_resources is deprecated:UserWarning"
]